added contact content

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,7 +29,7 @@ header {
 header h1 {
     padding-top: 15px;
     padding-bottom: 15px;
-    margin-left: -200px;
+    margin-left: 0;
 }
 
 nav ul {
@@ -64,6 +64,14 @@ li a {
     min-height: 800px;
 }
 
+h2 {
+    display:block;
+    justify-content: center;
+    font-size: 32px;
+    margin-left: 550px;
+    margin-top: 30px;
+}
+
 .bio {
     background-color: black;
     color: var(--primary-color);
@@ -71,16 +79,68 @@ li a {
     display: flex;
 }
 
+.bio p {
+    margin: 15px 50px 10px 50px;
+}
+
 .section-title {
+    display:block;
     justify-content: center;
 }
 
-.photo {
-    width: 300px;
+.photo img {
+    width: 400px;
     height: auto;
 }
 
-.skill-logos {
-    max-width: 100px;
-    max-height: auto;
+.skills h2 {
+
+}
+.skill-logos img {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+   
+}
+#my-work (
+    display: flex;
+    flex-wrap: wrap;
+    background-color: var(--quaternary color);
+)
+.premier-work img {
+    justify-content: right;
+
+    
+}
+
+#contact-info {
+    background-color: var(--primary-color);
+}
+
+.get-in-touch {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 15px;
+}
+
+.feeling-social {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 15px;
+}
+
+.fa-facebook {
+    background: #3b5998;
+    color: white;
+    padding: 10px;
+}
+
+.fa-linkedin {
+    background: #007bb5;
+    color: white;
+}
+
+.fa-instagram {
+    background: #125688;
+    color: white;
 }
