--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,7 @@ body {
     font-family: Arial, Helvetica, sans-serif
 
 }
-
+/* Styles for header */
 header {
     background-color: var(--primary-color);
     background-size: cover;
@@ -57,6 +57,7 @@ li a {
     color: black;
     font-size: 24px;
 }
+
 
 .hero {
     background-image: url("../images/susan-wilkinson-lK7YpJxpS_A-unsplash_horizontal.jpg");
@@ -107,6 +108,10 @@ h2 {
     flex-wrap: wrap;
     justify-content: space-around;
    
+}
+
+#skills {
+    background-color: var(--primary-color);
 }
 
 .work {
