--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -103,6 +103,7 @@ h2 {
     color: var(--primary-color);
     border-bottom: 4px Var(--primary-color);
     display: flex;
+    
 }
 
 .bio p {
@@ -212,6 +213,15 @@ h2 {
     padding: 15px;
 }
 
+.fa {
+    padding: 20px;
+    font-size: 30px;
+    width: 50px;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 50%;
+  }
+
 .fa-facebook {
     background: #3b5998;
     color: white;
@@ -228,6 +238,83 @@ h2 {
     color: white;
 }
 /* End styles for 'contact' section */
+
+/* REACH OUT STYLES START*/
+.contact {
+    background: var(--primary-color);
+}
+
+.contact h2 {
+    color: var(--quaternary-color);
+}
+
+.contact-info {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.contact-info > * {
+    flex: 1;
+    margin: 15px;
+} 
+
+.contact-info div {
+    color: white;
+}
+
+.contact-info h3 {
+    color: var(--quaternary-color);
+    font-size: 32px;
+}
+
+.contact-info p, .contact-info address {
+    margin: 20px 0;
+    line-height: 1.5;
+    font-size: 16px;
+    font-style: normal;
+    color: white;
+}
+
+.contact-form input, .contact-form textarea {
+    border: 1px solid var(--secondary-color);
+    display: block;
+    padding: 7px 15px;
+    font-size:  16px;
+    color: var(--secondary-color);
+    width: 100%;
+    margin-bottom: 15px;
+    margin-top: 5px;
+    border-radius: 10px;
+    background-color: rgba(255,255,255, 0.75);
+}
+
+.contact-form input:focus, .contact-form textarea:focus {
+    background-color:rgba(255,255,255, 1);
+    outline: none;
+}
+
+.contact-form button {
+    width: 100%;
+    border: none;
+    background: var(--quaternary-color);
+    color: var(--secondary-color);
+    text-align: center;
+    padding: 15px 0;
+    font-size: 16px;
+    border-radius: 10px;
+}
+
+.contact-form button:hover {
+    color: var(--primary-color);
+    background: var(--tertiary-color);
+}
+
+.contact-info a {
+    color: var(--tertiary-color);
+}
+
+/* REACH OUT STYLES END */
 
 /* Media query for smaller desktop screens*/
 
@@ -253,19 +340,48 @@ h2 {
     section {
         padding: 30px 15 px;
     }
+
+    h2 {
+        text-align: center;
+        display: block;
+    }
+    .flex-row {
+        flex-wrap: wrap;
+        
+    }
+
+    .bio {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        text-align: center;
+        width: 100%;
+    }
+    .photo{
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        height: 100%;
+    }
+}
+    
+    /*.bio {
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
     .bio p {
         display: flex;
         flex-wrap: wrap;
         text-align: center;
-        height: 300px;
-        width: 100%;
+        width: 90%;
+        margin: 15px;
     }
     .photo img {
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
-        width: 100%;
-    }
+        width: 85%;
+    }*/
 }
 
 /*Media query for mobile phones and smaller */
