--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,7 +70,7 @@ footer {
 }
 
 footer h2 {
-    color: var(--secondary-color);
+    color: var(--quaternary-color);
     font-size: 30px;
     margin: 0;
 }
@@ -89,13 +89,19 @@ footer h2 {
 }
 
 h2 {
-    color:crimson;
+    color: var(--primary-color);
     display:block;
     justify-content: left;
-    text-align: left;
+    text-align: center;
     font-size: 32px;
     margin-top: 30px;
     margin-left: 50px;
+}
+
+.skills h2 {
+    color: var(--quaternary-color);
+    display: block;
+    text-align: center;
 }
 
 .bio {
@@ -103,17 +109,13 @@ h2 {
     color: var(--primary-color);
     border-bottom: 4px Var(--primary-color);
     display: flex;
-    
 }
 
 .bio p {
     margin: 15px 50px 10px 50px;
 }
 
-.section-title {
-    display:block;
-    justify-content: center;
-}
+
 
 .photo img {
     width: 400px;
@@ -132,9 +134,6 @@ h2 {
     background-color: var(--primary-color);
 }
 
-.skills h2 {
-    color: var(--primary-color);
-}
 
 /* End styles for skills section */
 
@@ -158,7 +157,7 @@ h2 {
     justify-content: space-around;
     position: relative;
     width: 90%;
-    padding: 30px;
+    padding: 20px;
 }
 
 .work-examples article {
@@ -213,29 +212,12 @@ h2 {
     padding: 15px;
 }
 
-.fa {
-    padding: 20px;
-    font-size: 30px;
-    width: 50px;
-    text-align: center;
-    text-decoration: none;
-    border-radius: 50%;
-  }
-
-.fa-facebook {
-    background: #3b5998;
-    color: white;
-    padding: 10px;
-}
-
-.fa-linkedin {
-    background: #007bb5;
-    color: white;
-}
-
-.fa-instagram {
-    background: #125688;
-    color: white;
+.sm-links {
+    display: flex;
+    flex-wrap: wrap;
+    color: var(--quaternary-color);
+    font-size: 50px;
+    
 }
 /* End styles for 'contact' section */
 
@@ -260,7 +242,7 @@ h2 {
 } 
 
 .contact-info div {
-    color: white;
+    color: var(--tertiary-color);
 }
 
 .contact-info h3 {
@@ -273,7 +255,7 @@ h2 {
     line-height: 1.5;
     font-size: 16px;
     font-style: normal;
-    color: white;
+    color: var(--tertiary-color);
 }
 
 .contact-form input, .contact-form textarea {
@@ -314,7 +296,11 @@ h2 {
     color: var(--tertiary-color);
 }
 
+.flex-row {
+    display: flex;
+}
 /* REACH OUT STYLES END */
+
 
 /* Media query for smaller desktop screens*/
 
@@ -387,4 +373,12 @@ h2 {
 /*Media query for mobile phones and smaller */
 @media screen and (max-width: 575px) {
     
+    .contact-info {
+        text-align: center;
+    }
+
+    .contact-info > * {
+        flex: 0 100%;
+    }
+
 }
