--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,7 +37,8 @@ header {
 header h1 {
     padding-top: 15px;
     padding-bottom: 15px;
-    margin-left: 50;
+    padding-left: 50px;
+    margin-left: 50px;
 }
 
 nav ul {
@@ -45,11 +46,14 @@ nav ul {
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
-    list-style: none
+    list-style: none;
+    padding-left: 5px;
+    margin-left: 5px;
+    padding-top: 20px;
 }
 
 ul li {
-    margin-left: 20px;
+    margin-left: 10px;
     list-style-type:none;
 }
 
@@ -113,6 +117,7 @@ h2 {
 
 .bio p {
     margin: 15px 50px 10px 50px;
+    font-size: 30px;
 }
 
 
@@ -123,6 +128,17 @@ h2 {
 }
 /* Start styles for skills section */
 
+ul {
+    -moz-column-count: 4;
+    -moz-column-gap: 20px;
+    -webkit-column-count: 4;
+    -webkit-column-gap: 20px;
+    column-count: 4;
+    column-gap: 135px;
+    padding-left: 185px;
+    padding-bottom: 30px;
+}
+
 #skills {
     display: flex;
     flex-direction: column;
@@ -131,9 +147,30 @@ h2 {
 
 .skills-images {
     display: flex;
-    flex-direction: row;
-    justify-content: center;
+    font-size: 25px;
+    /* flex-direction: row; */
+    /* justify-content: center; */
     align-items: center;
+}
+
+.skillset {
+    display: flex;
+    color: red;
+    font-size: 30px;
+    line-height: 0.008;
+    padding-bottom: 75px;
+}
+
+.group1 {
+    width: 33%;
+}
+
+.group2 {
+    width: 33%;
+}
+
+.group3 {
+    width: 33%;
 }
 
 /* End styles for skills section */
@@ -249,7 +286,8 @@ h2 {
 }
 
 #resume {
-    color: var(--secondary-color)
+    color: var(--secondary-color);
+    font-size: xx-large;
 }
 
 .contact-info h3 {
